--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@ Template: Blankslate
 Version: 0.1.0
 */
 
-*GLOBAL CSS*/
+/*GLOBAL CSS*/
 
 body { 
-    font-family: 'Raleway', sans-serif;
-    max-width: 1400px;
+    font-family: 'Syne', sans-serif;
 }
 
 a { 
@@ -21,9 +20,80 @@ a {
 
 /*HEADER*/
 
-.menu {
-    display: flex;
-    justify-content: flex-end;
-    justify-content: space-around;
-    align-items: center;
+header {
+    padding: 0px;
 }
+
+/*FORMULAIRE*/
+
+form {
+    max-width: 300px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 20px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 100%;
+    padding: 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    margin-top: 10px;
+  }
+
+  .bouton {
+    padding: 10px 30px;
+    background-color: #E0B9B4;
+    color: #fff;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+  }
+
+  .a {
+    margin-left: 100px;
+  }
+
+  .b {
+    margin-left: 350px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    
+    form {
+        margin-left: -200px;
+    }
+} 
+
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+    form {
+        margin-left: -100px;
+    }
+}
+  
+.commander {
+  display: flex;
+  flex-direction: row;
+  width: 800px;
+  font-size: 16px;
+  padding: 20px;
+  color: #fff;
+  }
+
+
+  .commander h3 {
+    font-size: 24px;
+    color: #fff;
+    margin-bottom: 20px;
+  }
+
+  .milieu {
+    border-right: 1px solid #ccc;
+    margin: 0 20px;
+  }
