--- a/style.css
+++ b/style.css
@@ -10,71 +10,71 @@ Version: 0.1.0
 /*GLOBAL CSS*/
 
 body { 
-    font-family: 'Syne', sans-serif;
+  font-family: 'Syne', sans-serif;
 }
 
 a { 
-    color: #000;
-    text-decoration: none;
+  color: #000;
+  text-decoration: none;
 }
 
 /*HEADER*/
 
 header {
-    padding: 0px;
+  padding: 0px;
 }
 
 /*FORMULAIRE*/
 
 form {
-    max-width: 300px;
-  }
+  max-width: 300px;
+}
   
-  label {
-    display: block;
-    margin-bottom: 20px;
-  }
+label {
+  display: block;
+  margin-bottom: 20px;
+}
   
-  input[type="text"],
-  input[type="email"],
-  textarea {
-    width: 100%;
-    padding: 15px;
-    border: none;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    font-size: 16px;
-    margin-top: 10px;
-  }
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  font-size: 16px;
+  margin-top: 10px;
+}
 
-  .bouton {
-    padding: 10px 30px;
-    background-color: #E0B9B4;
-    color: #fff;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-  }
+.bouton {
+  padding: 10px 30px;
+  background-color: #E0B9B4;
+  color: #fff;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
 
-  .a {
-    margin-left: 100px;
-  }
+.a {
+  margin-left: 100px;
+}
 
-  .b {
-    margin-left: 350px;
-  }
+.b {
+  margin-left: 350px;
+}
 
-  @media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     
-    form {
-        margin-left: -200px;
-    }
+form {
+  margin-left: -200px;
+}
 } 
 
 @media only screen and (min-width: 600px) and (max-width: 1024px) {
-    form {
-        margin-left: -100px;
-    }
+form {
+  margin-left: -100px;
+}
 }
   
 .commander {
@@ -84,16 +84,27 @@ form {
   font-size: 16px;
   padding: 20px;
   color: #fff;
-  }
+}
 
 
-  .commander h3 {
-    font-size: 24px;
-    color: #fff;
-    margin-bottom: 20px;
-  }
+.commander h3 {
+  font-size: 24px;
+  color: #fff;
+  margin-bottom: 20px;
+}
 
-  .milieu {
-    border-right: 1px solid #ccc;
-    margin: 0 20px;
-  }
+.milieu {
+  border-right: 1px solid #ccc;
+  margin: 0 20px;
+}
+
+@media only screen and (max-width: 600px) {
+
+.commander {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 300px;
+  margin-right: 0px;
+}
+}
